# Programming-Collective-Intelligence-in-Haskell

./: README  pci_haskell.cabal
src/: Main.hs
